little code cleanup